--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,10 +11,9 @@
          stopOnFailure="false">
     <testsuites>
         To test feature folder tests need shiprocket API email and password.
-        <testsuite name="Shiprocket Features Test">
+        <!-- <testsuite name="Shiprocket Features Test">
             <directory>tests/Feature</directory>
-        </testsuite>
-
+        </testsuite> -->
         <testsuite name="Shiprocket Unit Test">
             <directory>tests/Unit</directory>
         </testsuite>
