--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [7.3 , 7.4]
+        php: [7.3 , 7.4, 8.0]
         laravel: [5.8.*,6.*, 7.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
