--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5"
+        "php": "^7.2.5|8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
