--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^7.5|^9.0",
         "psalm/plugin-laravel": "^1.5",
         "vimeo/psalm": "^4.0"
