--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.0",
         "psalm/plugin-laravel": "^1.1",
-        "vimeo/psalm": "^4.0"
+        "vimeo/psalm": "^4.0",
+        "laravel/legacy-factories": "^1.1"
     },
     "autoload": {
         "psr-4": {
