--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         php: [7.4, 8.0]
         laravel: [7.*,8.*]
-        dependency-version: [prefer-lowest, prefer-stable]
+        dependency-version: [prefer-stable]
         include:
           - laravel: 8.*
             testbench: 6.*
