--- a/composer.json
+++ b/composer.json
@@ -9,23 +9,19 @@
     ],
     "homepage": "https://github.com/seshac/laravel-shiprocket-api",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Sesha",
-            "email": "seshadriece008@gmail.com",
-            "homepage": "https://github.com/seshac",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "Sesha",
+        "email": "seshadriece008@gmail.com",
+        "homepage": "https://sesha.in",
+        "role": "Developer"
+    }],
     "require": {
-        "php": "^7.2.5"
+        "php": "^7.3|^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^7.5|^9.0",
-        "psalm/plugin-laravel": "^1.2",
-        "vimeo/psalm": "^3.11"
+        "phpunit/phpunit": "^7.5|^9.0"
     },
     "autoload": {
         "psr-4": {
